--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently "npm run server" "npm run client"",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server.js"
   },
   "dependencies": {
